--- a/VirtualBox/nbproject/project.properties
+++ b/VirtualBox/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Examen
+application.title=VirtualBox
 application.vendor=Stream
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -25,11 +25,11 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Examen.jar
+dist.jar=${dist.dir}/VirtualBox.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.GeneradorProcesos.jar=C:\\Users\\Stream\\Desktop\\Clases\\REPETIR\\REPASOPSP\\GeneradorProcesos\\dist\\GeneradorProcesos.jar
+file.reference.GeneradorProcesos.jar=../GeneradorProcesos/dist/GeneradorProcesos.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -57,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=examen.Examen
+main.class=virtualBox.VirtualBox
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
